# s3mon

./: .cirrus.yml  .justfile  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  example.yml
.circleci/: config.yml
.github/workflows/: build.yml  coverage.yml  deploy.yml
contrib/grafana/: s3mon-dashboard.json
src/: auth.rs  config.rs  envs.rs  lib.rs  main.rs  output.rs  s3.rs  slack.rs
src/cli/: start.rs  telemetry.rs
src/cli/actions/: mod.rs  run.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
tests/: integration_test.rs
tests/helpers/: mod.rs
